<resources>
    <string name="app_name">Xmpp</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="user_login">账户登录</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_user">请输入手机号码</string>
    <string name="user_register">用户注册</string>
    <string name="input_phone">请输入用户名</string>
    <string name="input_pwd_again">请重新输入密码</string>
    <string name="input_user_sign">请输入用户签名</string>
    <string name="input_user_nickname">请输入昵称</string>
    <string name="loading_more">正在获取更多</string>
</resources>
