<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grag_by"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_title_height"
        android:layout_marginBottom="@dimen/dp_20"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibtn_back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@null"
            android:src="@mipmap/ic_left_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/user_login"
            android:textColor="@color/text_black"
            android:textSize="16dp" />

    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/headCircle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_24"
        android:src="@drawable/ic_head00" />


    <LinearLayout
        android:id="@+id/loginL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_title_height"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:src="@mipmap/ic_user" />

            <EditText
                android:id="@+id/edit_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/input_user"
                android:paddingLeft="@dimen/dp_5"
                android:textColorHint="@color/text_gray"
                android:textSize="@dimen/dp_14" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:background="@color/by_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_title_height"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:src="@mipmap/ic_pwd" />

            <EditText
                android:id="@+id/edit_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/input_pwd"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/dp_5"
                android:textColorHint="@color/text_gray"
                android:textSize="@dimen/dp_14" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/btn_login"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/dp_15" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="@dimen/preview_view_height"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_circle_orign"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/text_black" />

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="@dimen/preview_view_height"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_weight="1"
            android:background="@drawable/bg_circle_orign"
            android:gravity="center"
            android:text="@string/forget_pwd"
            android:textColor="@color/text_black" />
    </LinearLayout>


</LinearLayout>